cmake_minimum_required(VERSION 3.24)
project(cppgram)
find_package(OpenSSL REQUIRED)
set(CMAKE_CXX_STANDARD 20)
add_compile_options(-Wall -Wextra -Werror -Wconversion)
add_executable(cppgram main.cpp Bot.cpp Update/Update.h Update/Message/Message.h Update/Message/Message.cpp Update/Message/Photo.h)
target_link_libraries(cppgram OpenSSL::SSL)