cmake_minimum_required(VERSION 3.24)
project(cppgram)
project(Bot)
find_package(OpenSSL REQUIRED)
set(CMAKE_CXX_STANDARD 20)
set(SOURCE  Bot.cpp Update/Message/Message.cpp)
add_compile_options(-Wall -Wextra -Werror -Wconversion)
add_executable(Bot main.cpp ${SOURCE} Update/Update.h Update/Message/Message.h Update/Message/Photo.h)
add_library(cppgram SHARED ${SOURCE})
target_link_libraries(Bot OpenSSL::SSL)
target_link_libraries(cppgram OpenSSL::SSL)
